<resources>
    <string name="app_name">EPSLab\n電能管理系統</string>
    <string name="title_login">電 能 管 理 系 統</string>
    <string name="title_home">首頁</string>
    <string name="title_control">電器控制</string>
    <string name="title_dr">節電行動</string>
    <string name="account">帳號 ：</string>
    <string name="password">密碼 ：</string>
    <string name="verification_code">驗證碼 ：</string>
    <string name="auto">自動登入</string>
    <string name="remember">記住密碼</string>
    <string name="back">返回</string>
    <string name="save">儲存</string>
    <string name="cancel">取消</string>
    <string name="confirm">確定</string>
    <string name="sw">開關：</string>
    <string name="left1">左1區</string>
    <string name="left2">左2區</string>
    <string name="mid1">中1區</string>
    <string name="mid2">中2區</string>
    <string name="right1">右1區</string>
    <string name="right2">右2區</string>
    <string name="front">前排</string>
    <string name="Behind">後排</string>
    <string name="btn_strong">強</string>
    <string name="btn_mid">中</string>
    <string name="btn_low">弱</string>
    <string name="sw_time">定時開關</string>
    <string name="btn_clod">冷氣</string>
    <string name="btn_wet">除溼</string>
    <string name="btn_wind">送風</string>
    <string name="btn_sw">開/關</string>
    <string name="btn_turn">轉/停</string>
    <string name="power_supply">電源：關</string>
    <string name="ac_mode">模式：冷氣</string>
    <string name="room_temp">室內温度：</string>
    <string name="room_rh">室内濕度：</string>
    <string name="ac_temp">冷氣溫度：</string>
    <string name="current_luminance">現在照度：</string>
    <string name="title_change_ac">變更冷氣設定</string>
    <string name="change_ac_position">安裝位置</string>
    <string name="change_ac_label">更新廠牌</string>
    <string name="title_change_pwd">變更密碼</string>
    <string name="old_pwd">舊密碼</string>
    <string name="hint_old_pwd">請輸入舊密碼</string>
    <string name="new_pwd">新密碼</string>
    <string name="hint_new_pwd">請輸入新密碼</string>
    <string name="check_pwd">確認新密碼</string>
    <string name="title_insert_schedule">新增插座排程</string>
    <string name="select_action">選擇動作&#160;:&#160;</string>
    <string name="select_action_on">&#160;開啟</string>
    <string name="select_action_off">&#160; 關閉</string>
    <string name="back_control">電器控制</string>
    <string name="title_comfort">舒適度設定</string>
    <string name="title_dim">照度設定</string>
    <string name="title_motion">移動延遲設定</string>
    <string name="title_price">最低參加節電行動補償金額</string>
    <string name="current_comfort">目前舒適度&#160;：</string>
    <string name="motion_setting">移動延遲參數設定&#160;(分)：</string>
    <string name="price_setting">投標價格&#160;：</string>
    <string name="Quick_operation">快速操作</string>
    <string name="Light">燈光</string>
    <string name="Ac">空調</string>
    <string name="Fan">風扇</string>
    <string name="Exhaust">排風扇</string>
    <string name="Plug">智慧插座</string>
    <string name="sw_all_92702">一鍵全開</string>
    <string name="sw_all_ac_92702">一鍵全開-空調</string>
    <string name="sw_all_light_92702">一鍵全開-照明</string>
    <string name="sw_all_fan_92702">一鍵全開-風扇</string>
    <string name="sw_auto_comfort1_92702">自動舒適度-區域一</string>
    <string name="sw_auto_comfort2_92702">自動舒適度-區域二</string>
    <string name="sw_auto_ac_92702">自動空調</string>
    <string name="sw_auto_light_92702">自動調光</string>
    <string name="sw_auto_light1_92702">自動調光-區域一</string>
    <string name="sw_auto_light2_92702">自動調光-區域二</string>
    <string name="sw_motion_92702">移動感測器</string>
    <string name="sw_motionDoor_92702">移動感測器-門口</string>
    <string name="sw_motion1_92702">移動感測器-左區</string>
    <string name="sw_motion2_92702">移動感測器-中區</string>
    <string name="sw_motion3_92702">移動感測器-右區</string>
    <string name="ac1">空調1</string>
    <string name="ac2">空調2</string>
    <string name="fan1">風扇1</string>
    <string name="fan2">風扇2</string>
    <string name="fan3">風扇3</string>
    <string name="fan4">風扇4</string>
    <string name="fan5">風扇5</string>
    <string name="fan_wind">風度：中</string>
    <string name="exhaust1">排風扇1</string>
    <string name="exhaust2">排風扇2</string>
    <string name="exhaust_wind">風度：強</string>
    <string name="sw_all_92710">一鍵全開</string>
    <string name="sw_all_ac_92710">一鍵全開-空調</string>
    <string name="sw_all_light_92710">一鍵全開-照明</string>
    <string name="sw_all_fan_92710">一鍵全開-風扇</string>
    <string name="sw_auto_comfort_92710">自動舒適度</string>
    <string name="sw_auto_ac_92710">自動空調</string>
    <string name="sw_auto_light_92710">自動調光</string>
    <string name="sw_auto_light1_92710">自動調光-前排</string>
    <string name="sw_auto_light2_92710">自動調光-後排</string>
    <string name="sw_motion_92710">移動感測器</string>
    <string name="sw_all_jun">一鍵全開</string>
    <string name="sw_all_ac_jun">一鍵全開-空調</string>
    <string name="sw_all_light_jun">一鍵全開-照明</string>
    <string name="sw_all_fan_jun">一鍵全開-風扇</string>
    <string name="projection">投影機</string>
    <string name="sw_auto_comfort_jun">自動舒適度</string>
    <string name="sw_auto_ac_jun">自動空調</string>
    <string name="sw_auto_light_jun">自動調光</string>
    <string name="sw_auto_light1_jun">自動調光-第一排</string>
    <string name="sw_auto_light2_jun">自動調光-第二排</string>
    <string name="sw_auto_light3_jun">自動調光-第三排</string>
    <string name="sw_auto_light4_jun">自動調光-第四排</string>
    <string name="sw_motion_jun">移動感測器</string>
    <string name="title_1">一鍵全開/關</string>
    <string name="title_2">自動舒適度</string>
    <string name="title_3">自動空调</string>
    <string name="title_4">自動調光</string>
    <string name="title_5">移動感測</string>
    <string name="title_6">投影模式說明</string>
    <string name="question_1">全開/關空調、照明、風扇。</string>
    <string name="question_2">依使用者選擇自動調整冷氣、風扇、排風扇至設定舒適度，此舒適度依照溫濕度感測器及空氣品質檢測計之值來做調整。 (建議值濕度55%、溫度24度、照度500LUX、二氧化碳800ppm)</string>
    <string name="question_3">根據室內溫濕度與體感溫度換算來調整到對應舒適度之冷氣溫度，使用者可以選擇是否開啟自動調溫功能。</string>
    <string name="question_4">根據室內照度計量測值，透過適當轉換成辦公桌上的對應照度來調整LED燈亮度值，使用者可以選擇是否開啟自動調光功能及照度上下限。 (若選擇自動調光旁之按鈕則做全區控制)(建議照度：300~500LUX)</string>
    <string name="question_5">根據移動感測器來判斷是否有人在室內來開關LED燈，使用者可以選擇是否開啟感測功能以及設定多久時間若無人則照明自動關閉(移動延遲參數)。 (若選擇移動感測器旁之按鈕則做全區控制)(建議時間60秒)</string>
    <string name="question_6">開啟第2~4排燈光，投影機開啟，冷氣調整至最舒適模式。</string>
    <string name="question_dr1">於節電行動後，自動開啟該電器。</string>
    <string name="question_dr2">1.若無意願參加:將拉軸移至最左端(不參加)。\n2.若有意願參加:在2~10區間內，選擇設備參與節電行動之最低可接受的補償金額。( Ex: 如果選擇2，代表該設備在每度電大於2元以上之補償金額，皆願意參與節電行動。)</string>
    <string name="question_dr3">可拖曳各項設備以決定設備之節電順序，若前幾項設備已滿足本次節電行動需求，則後續幾項節電設備不會被納入節電行動。</string>
    <string name="dr_1">節電行動設備</string>
    <string name="dr_2">當前事件</string>
    <string name="dr_3">未來事件</string>
    <string name="dr_4">歷史事件</string>
    <string name="dr_device">設備</string>
    <string name="dr_energy_used">用電(瓩)</string>
    <string name="dr_re_power">復電</string>
    <string name="dr_price">設置投標價格(元)</string>
    <string name="left_light">左區照明</string>
    <string name="mid_light">中區照明</string>
    <string name="right_light">右區照明</string>
    <string name="start_at">開始時間：</string>
    <string name="end_at">結束時間：</string>
    <string name="tv_exdrop">預計抑低量 (瓩)：</string>
    <string name="tv_droptime">抑低時間 (分)：</string>
    <string name="tv_exmakeup">預估補償金額 (元)：</string>
    <string name="tv_history_p2">實際抑低量 (kW)：</string>
    <string name="tv_history_result">狀態：</string>
    <string name="tv_history_cost2">實際補償金額 (元)：</string>
    <string name="tv_history_p3">當日負載基準線 (kW)：</string>
    <string name="tv_month_powerCost">當月累積電費</string>
    <string name="tv_immediatePower_office">辦公室即時用電</string>
    <string name="tv_immediatePower_all">電燈、風扇、排風扇即時用電</string>
    <string name="tv_immediatePower_ac">冷氣即時用電</string>
    <string name="tv_immediatePower_fan">風扇即時用電</string>
    <string name="tv_immediatePower_plug">插座即時用電</string>
    <string name="home_1">天氣/室內資訊</string>
    <string name="home_2">最近DR事件</string>
    <string name="home_3">用電圖表顯示</string>
    <string name="tv_weather">天氣：</string>
    <string name="tv_outdoor_temp">室外温度：</string>
    <string name="tv_indoor_temp">温度值：</string>
    <string name="tv_indoor_temp1">區域一温度：</string>
    <string name="tv_indoor_temp2">區域二温度：</string>
    <string name="tv_indoor_rh">濕度值：</string>
    <string name="tv_indoor_rh1">區域一濕度：</string>
    <string name="tv_indoor_rh2">區域二濕度：</string>
    <string name="tv_indoor_CO2">CO2濃度：</string>
    <string name="tv_indoor_CO21">CO2濃度(一)：</string>
    <string name="tv_indoor_CO22">CO2濃度(二)：</string>
    <string name="tv_indoor_lux1">室内照度(窗戶中柱)：</string>
    <string name="tv_indoor_lux2">室内照度(窗戶左柱)：</string>
    <string name="tv_indoor_lux3">室内照度(配電盤)：</string>
    <string name="tv_indoor_lux4">室内照度(門左)：</string>
    <string name="tv_indoor_lux5">室内照度(門右側)：</string>
    <string name="tv_elc_bill">目前電價：</string>
    <string name="tv_consumption">當月累積用電：</string>
    <string name="tv_av_consumption">當月累積電費：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Ac_position">
        <item> <font size="18">空調1</font> </item>
        <item> <font size="18">空調2</font> </item>
    </string-array>
    <string-array name="Ac_Label">
        <item> <font size="18">HITACHI-SANYO</font> </item>
        <item> <font size="18">HERAN (同時適用聲寶、萬士益、良峰、國品)</font> </item>
        <item> <font size="18">PANASONIC (同時適用華菱、三葉、王冠、王子、金鼎、開利、冰點)</font> </item>
        <item> <font size="18">TECO</font> </item>
        <item> <font size="18">DAIKIN (同時適用APTON)</font> </item>
        <item> <font size="18">TATUNG</font> </item>
        <item> <font size="18">其他（請找管理員進行冷氣設定）</font> </item>
    </string-array>
    <string-array name="schedule_delete">
        <item> <font size="18"> 編輯 </font> </item>
        <item> <font size="18"> 刪除 </font> </item>
    </string-array>
</resources>