<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jason.wbhems_simple.DR.dr_equipmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dr_1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="27sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
       android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/dr_device"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/dr_energy_used"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="18dp"
            android:text="@string/dr_re_power"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:text="@string/dr_price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.jason.wbhems_simple.DR.DrDragListView
            android:id="@+id/lv_equips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.example.jason.wbhems_simple.DR.DrDragListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:visibility="visible"
            android:id="@+id/btn_drequip_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="說明" />

        <Button
            android:id="@+id/btn_drequip_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="返回" />

    </LinearLayout>



</LinearLayout>