<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeAC">

    <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eaeaea"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_change_ac"
            android:textColor="#000000"
            android:textSize="22dp" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_ac_position"
                android:textSize="22dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"/>
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownVerticalOffset="45dp"
                android:background="@drawable/spinner_blue"
                android:entries="@array/Ac_position">
            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="更新厂牌"
                android:textSize="22dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textColor="#000000"/>
           <Spinner
               android:id="@+id/spinner2"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:dropDownVerticalOffset="45dp"
               android:background="@drawable/spinner_blue"
               android:entries="@array/Ac_Label">,
           </Spinner>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/button_shape2"
            android:layout_weight="0.8"
            android:layout_marginRight="10dp"
            android:id="@+id/btn_cpwd_return"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/button_shape2"
            android:id="@+id/btn_cpwd_confirm"
            android:layout_weight="0.8"/>

    </LinearLayout>

</LinearLayout>